fixed spacing of grid

--- a/src/css/ContentModal.css
+++ b/src/css/ContentModal.css
@@ -5,14 +5,13 @@
   margin: 0px;
   display: grid;
   width: 100vw;
-  height: 15vh;
-  z-index: 2;
-  grid-template-columns: [line1] 84% [line2] 15% [end];
-  grid-template-rows: [row1] 75% [row2] 5% [row3] 20% [end];
+  z-index: 1;
+  grid-template-columns: [col] 1fr [col] 100px [end];
+  grid-template-rows: [row] 1fr [row] 125px [row] 25px [end];
 }
 
 .ModalArea.flipped {
-  grid-template-columns: [line1] 15% [line2] 84% [end];
+  grid-template-columns: [col] 100px [col] 1fr [end];
 }
 
 .ContentArea {
@@ -20,14 +19,13 @@
   grid-column-end: 2;
   grid-row-start: 1;
   grid-row-end: 3;
-  z-index: 0;
+  z-index: 3;
   position: relative;
   bottom: 0px;
   margin: 0px;
   padding: 10px;
   font-size: 20px;
   width: 100%;
-  height: 75%;
   color: var(--main-bg-color);
   background-color: var(--main-text-color);
   min-width: fit-content;
@@ -41,99 +39,48 @@
   grid-row-end: 3;
 }
 
-.circleArea {
-  grid-column-start: 2;
-  grid-column-end: 2;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  z-index: -1;
-  position: relative;
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-}
-
-.circleArea.flipped {
-  grid-column-start: 1;
-  grid-column-end: 1;
-}
-
-.circleArea span {
-  position: relative;
-  height: 5vh;
-  width: 100%;
-}
-
 .circleHolder {
-  z-index: -1;
   grid-column-start: 2;
   grid-column-end: 2;
-  grid-row-start: 1;
-  grid-row-end: 2;
+  grid-row-start:2;
+  grid-row-end: 4;  
   position: relative;
-  margin-left: -1px;
   width: 100%;
-  min-height: 100%;
-  height: inherit;
-  margin-top: -1px;
+  height: 100%;
+  overflow: hidden;
+  z-index: 0;
 }
 
 .circleHolder.flipped {
-  transform: scaleX(-1);
   grid-column-start: 1;
   grid-column-end: 1;
 }
 
-.quarterCircle {
-  z-index: -3;
-  margin-left: -10vw;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  border: 10vw solid var(--main-text-color);
-  border-radius: 25% 75% 0 0 / 100% 100% 0 0;
-  border-bottom: 0;
-  border-left: 0;
-  border-top: 0;
-  width: 20vw;
-  height: 10vw;
+
+.outerCircle {
+  position: relative;
+  width: 200%;
+  height: 100%;
+  margin-top: 25%;
+  margin-left: -125%;
+  border-radius: 50% 50% 0% 0%;
+  background-color: var(--main-text-color);
 }
 
-.blockingCircle {
-  z-index: -2;
-  margin-left: -5vw;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  display: flex;
-  border: 10vw solid var(--main-bg-color);
-  border-radius: 25% 65% 0 0 / 100% 100% 0 0;
-  border-bottom: 0;
-  border-left: 0;
-  border-top: 0;
-  width: 12vw;
-  height: 7.5vw;
+.outerCircle.flipped {
+  margin-left: 25%;
 }
 
-@media (min-aspect-ratio: 1/1) {
-  /* Styles applied when the viewport width is greater than or equal to its height */
-  .circleHolder {
-    margin-top: 7vh;
-  }
+.innerCircle {
+  position: sticky;
+  border-radius: 50% 50% 0% 0%;
+  background-color: var(--main-bg-color);
+  width: 80%;
+  height: 80%;  
+  top: 80%;
+  z-index: 0;
 }
 
-@media (max-aspect-ratio: 1/1) {
-  /* Styles applied when the viewport height is greater than or equal to its width */
-  body {
-    background-color: lightcoral;
-  }
-}
-
-@media (aspect-ratio: 1/1) {
-  /* Styles applied when the viewport width and height are equal */
-  body {
-    background-color: lightgreen;
-  }
+.outerCircle.flipped .innerCircle {
+  left: 80%;
 }
